--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>org.github.spring</groupId>
   <artifactId>spring</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0GA</version>
 
   <modules>
     <module>module-beans</module>
