--- a/pom.xml
+++ b/pom.xml
@@ -22,55 +22,27 @@
 
     <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
     <maven.compiler.plugin>3.6.2</maven.compiler.plugin>
-    <maven.assembly.plugin>3.0.0</maven.assembly.plugin>
-    <maven.xmbg.plugin>1.1.0</maven.xmbg.plugin>
-    <maven.compiler.plugin>3.6.1</maven.compiler.plugin>
     <maven.resources.plugin>3.0.2</maven.resources.plugin>
-    <maven.war.plugin>3.0.0</maven.war.plugin>
     <maven.generator.plugin>1.3.5</maven.generator.plugin>
-    <maven.shade.plugin>3.0.0</maven.shade.plugin>
     <maven.jar.plugin>3.0.2</maven.jar.plugin>
     <maven.surefire.plugin>2.20</maven.surefire.plugin>
-    <cglib.version>3.2.5</cglib.version>
-    <mysema.querydsl.version>3.7.4</mysema.querydsl.version>
+    <hikaricp.version>2.7.1</hikaricp.version>
     <dolphin.version>1.1.0</dolphin.version>
-    <clojure.core.async.version>0.3.442</clojure.core.async.version>
-    <clojure.script.version>1.9.521</clojure.script.version>
-    <clojure.tools.nrepl.version>0.2.13</clojure.tools.nrepl.version>
-    <clojure.core.version>1.8.0</clojure.core.version>
-    <onos.yang.version>1.11</onos.yang.version>
-    <jboss.ejb.api3.2.spec.version>1.0.0.Final</jboss.ejb.api3.2.spec.version>
-    <testng.version>6.11</testng.version>
+    <io-github-cgi.version>1.0.1</io-github-cgi.version>
     <javax.servlet.api.version>4.0.0</javax.servlet.api.version>
-    <pagehelper.version>4.2.1</pagehelper.version>
-    <javaee.api.version>7.0</javaee.api.version>
-    <mybatis.plus.version>2.1.1</mybatis.plus.version>
-    <commons.pool.version>2.4.2</commons.pool.version>
-    <commons-codec.version>1.10</commons-codec.version>
-    <commons.fileupload.version>1.3.2</commons.fileupload.version>
-    <commons.io.version>2.5</commons.io.version>
+    <mybatis.plus.version>2.1.2</mybatis.plus.version>
     <commons-lang3.version>3.6</commons-lang3.version>
-    <google.gson.version>2.8.0</google.gson.version>
-    <google.protobuf.version>3.4.0</google.protobuf.version>
     <google.guava.version>23.0</google.guava.version>
-    <apache.poi.version>3.15</apache.poi.version>
-    <apache.avro.version>1.8.1</apache.avro.version>
-    <scala-lib.version>2.12.3</scala-lib.version>
     <kotlin.version>1.1.4-2</kotlin.version>
     <core.lombok.version>1.16.18</core.lombok.version>
-    <core.netty.version>4.1.14.Final</core.netty.version>
     <slf4j-api.version>1.7.25</slf4j-api.version>
-    <logback.version>1.2.3</logback.version>
-    <mockito-core.version>2.8.47</mockito-core.version>
+    <javaee-api.version>8.0</javaee-api.version>
     <jackson.version>2.9.1</jackson.version>
-    <clojure-tools-nrepl.version>0.2.13</clojure-tools-nrepl.version>
-    <testng.version>6.11</testng.version>
-    <httpclient.version>4.5.3</httpclient.version>
     <joda-time.version>2.9.9</joda-time.version>
-    <scala-test.version>3.0.3</scala-test.version>
-    <scala-reflect.version>2.12.3</scala-reflect.version>
     <springframework.version>5.0.0.RELEASE</springframework.version>
-    <springsecurity.version>4.2.3.RELEASE</springsecurity.version>
+    <aspectjrt.version>1.8.11</aspectjrt.version>
+    <pagehelper.version>5.1.2</pagehelper.version>
+    <mysql.version>5.1.44</mysql.version>
   </properties>
 
   <dependencyManagement>
@@ -122,14 +94,9 @@
         <version>${slf4j-api.version}</version>
       </dependency>
       <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
-        <version>1.2</version>
-      </dependency>
-      <dependency>
         <groupId>javax</groupId>
         <artifactId>javaee-api</artifactId>
-        <version>8.0</version>
+        <version>${javaee-api.version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -145,13 +112,7 @@
       <dependency>
         <groupId>com.zaxxer</groupId>
         <artifactId>HikariCP</artifactId>
-        <version>2.6.1</version>
-        <exclusions>
-          <exclusion>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-          </exclusion>
-        </exclusions>
+        <version>${hikaricp.version}</version>
       </dependency>
       <dependency>
         <groupId>com.freetmp</groupId>
@@ -161,13 +122,9 @@
       <dependency>
         <groupId>io.github.cgi</groupId>
         <artifactId>mybatis-generator-plugins</artifactId>
-        <version>1.0.1</version>
+        <version>${io-github-cgi.version}</version>
       </dependency>
-      <dependency>
-        <groupId>org.github.spring</groupId>
-        <artifactId>module-beans</artifactId>
-        <version>${project.version}</version>
-      </dependency>
+
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
@@ -176,14 +133,14 @@
       <dependency>
         <groupId>org.aspectj</groupId>
         <artifactId>aspectjrt</artifactId>
-        <version>1.8.10</version>
+        <version>${aspectjrt.version}</version>
       </dependency>
 
       <!-- Third Party Libraries -->
       <dependency>
         <groupId>com.github.pagehelper</groupId>
         <artifactId>pagehelper</artifactId>
-        <version>5.1.1</version>
+        <version>${pagehelper.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
@@ -191,7 +148,7 @@
         <version>${springframework.version}</version>
       </dependency>
 
-      <!-- Core Libraries -->
+      <!-- core libraries -->
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
@@ -204,19 +161,21 @@
         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>org.thymeleaf</groupId>
-        <artifactId>thymeleaf-spring4</artifactId>
-        <version>3.0.7.RELEASE</version>
-      </dependency>
-      <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
-        <version>5.1.44</version>
+        <version>${mysql.version}</version>
       </dependency>
       <dependency>
         <groupId>com.baomidou</groupId>
         <artifactId>mybatis-plus</artifactId>
         <version>${mybatis.plus.version}</version>
+      </dependency>
+
+      <!-- module -->
+      <dependency>
+        <groupId>org.github.spring</groupId>
+        <artifactId>module-beans</artifactId>
+        <version>${project.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
