--- a/module-plugins/pom.xml
+++ b/module-plugins/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.github.spring</groupId>
     <artifactId>spring</artifactId>
-    <version>1.0.0GA</version>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
 
   <dependencies>
