--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>org.github.spring</groupId>
   <artifactId>spring</artifactId>
-  <version>1.0.0GA</version>
+  <version>0.0.1-SNAPSHOT</version>
 
   <modules>
     <module>module-beans</module>
@@ -208,7 +208,7 @@
           <version>${maven-source-plugin.version}</version>
           <executions>
             <execution>
-              <phase>verify</phase>
+              <phase>install</phase>
               <goals>
                 <goal>jar-no-fork</goal>
               </goals>
