--- a/pom.xml
+++ b/pom.xml
@@ -208,7 +208,8 @@
           <version>${maven-source-plugin.version}</version>
           <executions>
             <execution>
-              <phase>install</phase>
+              <id>attach-sources</id>
+              <phase>validate</phase>
               <goals>
                 <goal>jar-no-fork</goal>
               </goals>
