--- a/module-beans/pom.xml
+++ b/module-beans/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.github.spring</groupId>
     <artifactId>spring</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.4-SNAPSHOT</version>
   </parent>
 
   <dependencies>
@@ -74,6 +74,10 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
     </dependency>
   </dependencies>
 </project>
