--- a/module-components/pom.xml
+++ b/module-components/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.github.spring</groupId>
     <artifactId>spring</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.4-SNAPSHOT</version>
   </parent>
 
   <dependencies>
@@ -44,6 +44,10 @@
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjrt</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
     </dependency>
   </dependencies>
 </project>
