--- a/module-beans/pom.xml
+++ b/module-beans/pom.xml
@@ -79,5 +79,9 @@
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+    </dependency>
   </dependencies>
 </project>
