--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,12 @@
         <version>${aspectjrt.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>4.0.0</version>
+      </dependency>
+
       <!-- Third Party Libraries -->
       <dependency>
         <groupId>com.github.pagehelper</groupId>
