--- a/module-beans/pom.xml
+++ b/module-beans/pom.xml
@@ -91,5 +91,9 @@
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-stdlib-jre8</artifactId>
+    </dependency>
   </dependencies>
 </project>
