--- a/pom.xml
+++ b/pom.xml
@@ -16,52 +16,68 @@
     <module>module-components</module>
   </modules>
 
+  <developers>
+    <developer>
+      <id>JYD_XL</id>
+      <email>1252504314@Gmail.com</email>
+    </developer>
+  </developers>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
 
-    <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-    <maven.compiler.plugin>3.6.2</maven.compiler.plugin>
+    <maven.jar.plugin>3.0.2</maven.jar.plugin>
+    <maven.shade.plugin>3.1.0</maven.shade.plugin>
+    <maven.source.plugin>3.0.1</maven.source.plugin>
+    <maven.compiler.plugin>3.7.0</maven.compiler.plugin>
+    <maven.surefire.plugin>2.20.1</maven.surefire.plugin>
     <maven.resources.plugin>3.0.2</maven.resources.plugin>
     <maven.generator.plugin>1.3.5</maven.generator.plugin>
-    <maven.jar.plugin>3.0.2</maven.jar.plugin>
-    <maven.surefire.plugin>2.20</maven.surefire.plugin>
 
-    <hikaricp.version>2.7.1</hikaricp.version>
+    <hikaricp.version>2.7.2</hikaricp.version>
     <dolphin.version>1.1.0</dolphin.version>
     <io-github-cgi.version>1.0.1</io-github-cgi.version>
-    <mybatis.plus.version>2.1.2</mybatis.plus.version>
+    <mybatis.plus.version>2.1.4</mybatis.plus.version>
     <pagehelper.version>5.1.2</pagehelper.version>
     <mysql.version>5.1.44</mysql.version>
 
-    <commons-lang3.version>3.6</commons-lang3.version>
-    <google.guava.version>23.0</google.guava.version>
+    <apache.commons.lang3.version>3.6</apache.commons.lang3.version>
     <core.lombok.version>1.16.18</core.lombok.version>
     <slf4j-api.version>1.7.25</slf4j-api.version>
     <javaee-api.version>8.0</javaee-api.version>
-    <jackson.version>2.9.1</jackson.version>
+    <jackson.version>2.9.2</jackson.version>
     <joda-time.version>2.9.9</joda-time.version>
     <springframework.version>5.0.1.RELEASE</springframework.version>
-    <aspectjrt.version>1.8.11</aspectjrt.version>
+    <aspectjrt.version>1.8.12</aspectjrt.version>
     <kotlin.version>1.1.51</kotlin.version>
+    <jctools.version>2.1.1</jctools.version>
+    <netty.version>4.1.16.Final</netty.version>
+    <poi.version>3.17</poi.version>
+    <servlet.version>4.0.0</servlet.version>
+    <google.guava.version>23.2-jre</google.guava.version>
+    <google.protobuf.version>3.4.0</google.protobuf.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time</artifactId>
-        <version>${joda-time.version}</version>
-      </dependency>
+      <!-- netty -->
       <dependency>
         <groupId>org.jctools</groupId>
         <artifactId>jctools-core</artifactId>
-        <version>2.1.1</version>
+        <version>${jctools.version}</version>
       </dependency>
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-all</artifactId>
-        <version>4.1.16.Final</version>
+        <version>${netty.version}</version>
+      </dependency>
+
+      <!-- jackson -->
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${jackson.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
@@ -73,11 +89,20 @@
         <artifactId>jackson-dataformat-xml</artifactId>
         <version>${jackson.version}</version>
       </dependency>
+
+      <!-- apache commons -->
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>${commons-lang3.version}</version>
+        <version>${apache.commons.lang3.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>${poi.version}</version>
+      </dependency>
+
+      <!-- springframework -->
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
@@ -89,74 +114,14 @@
         <version>${springframework.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.poi</groupId>
-        <artifactId>poi-ooxml</artifactId>
-        <version>3.17</version>
-      </dependency>
-      <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-orm</artifactId>
         <version>${springframework.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${slf4j-api.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>javax</groupId>
-        <artifactId>javaee-api</artifactId>
-        <version>${javaee-api.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-annotations</artifactId>
-        <version>${jackson.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mybatis.generator</groupId>
-        <artifactId>mybatis-generator-core</artifactId>
-        <version>${maven.generator.plugin}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.zaxxer</groupId>
-        <artifactId>HikariCP</artifactId>
-        <version>${hikaricp.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.freetmp</groupId>
-        <artifactId>dolphin-mybatis-generator</artifactId>
-        <version>${dolphin.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.github.cgi</groupId>
-        <artifactId>mybatis-generator-plugins</artifactId>
-        <version>${io-github-cgi.version}</version>
-      </dependency>
-
-      <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
         <version>${springframework.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.aspectj</groupId>
-        <artifactId>aspectjrt</artifactId>
-        <version>${aspectjrt.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>4.0.0</version>
-      </dependency>
-
-      <!-- Third Party Libraries -->
-      <dependency>
-        <groupId>com.github.pagehelper</groupId>
-        <artifactId>pagehelper</artifactId>
-        <version>${pagehelper.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
@@ -166,9 +131,14 @@
 
       <!-- core libraries -->
       <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>${google.guava.version}</version>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>${joda-time.version}</version>
       </dependency>
       <dependency>
         <groupId>org.projectlombok</groupId>
@@ -176,10 +146,31 @@
         <version>${core.lombok.version}</version>
         <scope>provided</scope>
       </dependency>
+
+      <!-- javax -->
       <dependency>
-        <groupId>com.google.protobuf</groupId>
-        <artifactId>protobuf-java</artifactId>
-        <version>3.4.0</version>
+        <groupId>javax</groupId>
+        <artifactId>javaee-api</artifactId>
+        <version>${javaee-api.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>${servlet.version}</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <!-- data base -->
+      <dependency>
+        <groupId>com.github.pagehelper</groupId>
+        <artifactId>pagehelper</artifactId>
+        <version>${pagehelper.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.zaxxer</groupId>
+        <artifactId>HikariCP</artifactId>
+        <version>${hikaricp.version}</version>
       </dependency>
       <dependency>
         <groupId>mysql</groupId>
@@ -192,14 +183,7 @@
         <version>${mybatis.plus.version}</version>
       </dependency>
 
-      <!-- module -->
-      <dependency>
-        <groupId>org.github.spring</groupId>
-        <artifactId>module-beans</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-
-      <!-- kotlin -->
+      <!-- jvm lang -->
       <dependency>
         <groupId>org.jetbrains.kotlin</groupId>
         <artifactId>kotlin-stdlib-jre8</artifactId>
@@ -210,6 +194,57 @@
         <artifactId>kotlin-test</artifactId>
         <version>${kotlin.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjrt</artifactId>
+        <version>${aspectjrt.version}</version>
+      </dependency>
+
+      <!-- mybatis generator -->
+      <dependency>
+        <groupId>org.mybatis.generator</groupId>
+        <artifactId>mybatis-generator-core</artifactId>
+        <version>${maven.generator.plugin}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.freetmp</groupId>
+        <artifactId>dolphin-mybatis-generator</artifactId>
+        <version>${dolphin.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.github.cgi</groupId>
+        <artifactId>mybatis-generator-plugins</artifactId>
+        <version>${io-github-cgi.version}</version>
+      </dependency>
+
+      <!-- google libraries -->
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${google.guava.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.protobuf</groupId>
+        <artifactId>protobuf-java</artifactId>
+        <version>${google.protobuf.version}</version>
+      </dependency>
+
+      <!-- custom modules -->
+      <dependency>
+        <groupId>org.github.spring</groupId>
+        <artifactId>module-beans</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.github.spring</groupId>
+        <artifactId>module-plugins</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.github.spring</groupId>
+        <artifactId>module-components</artifactId>
+        <version>${project.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -232,6 +267,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
     </plugins>
 
     <pluginManagement>
@@ -239,11 +278,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>${maven-source-plugin.version}</version>
+          <version>${maven.source.plugin}</version>
           <executions>
             <execution>
               <id>attach-sources</id>
-              <phase>validate</phase>
+              <phase>install</phase>
               <goals>
                 <goal>jar-no-fork</goal>
               </goals>
@@ -289,8 +328,7 @@
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
-            <encoding>utf-8</encoding>
-            <showWarnings>true</showWarnings>
+            <encoding>UTF-8</encoding>
             <compilerArgument>-parameters</compilerArgument>
           </configuration>
         </plugin>
@@ -303,13 +341,13 @@
           <artifactId>maven-resources-plugin</artifactId>
           <version>${maven.resources.plugin}</version>
           <configuration>
-            <encoding>utf-8</encoding>
+            <encoding>UTF-8</encoding>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>3.0.0</version>
+          <version>${maven.shade.plugin}</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -318,7 +356,6 @@
   <repositories>
     <repository>
       <id>AliYun</id>
-      <layout>default</layout>
       <name>AliYun Repository</name>
       <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
     </repository>
@@ -327,7 +364,6 @@
   <pluginRepositories>
     <pluginRepository>
       <id>AliYun</id>
-      <layout>default</layout>
       <name>AliYun Repository</name>
       <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
     </pluginRepository>
